messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
  labels:
    app: django-messaging
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging
      version: green
  template:
    metadata:
      labels:
        app: django-messaging
        version: green
    spec:
      containers:
      - name: django-messaging-container
        image: your-dockerhub-username/django-messaging-app:2.0
        ports:
        - containerPort: 8000
